Adding revision history and done with video serie

--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -4,3 +4,6 @@ Redovisning kmom01
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/01_kmom01.md`.
+
+Hej,
+Kort om kmom1 lite strull med att installera alla saker till slut har man lyckats det skööööönt! Mycket saker på en gång som man måste ha koll på det blir en hel del att läsa! Annars kan man inte säga mer nu iaf då är det början nya saker som kommer hela tiden och man vill kunna allt men det går inte så snabb som man hade tänkt sig. Vi kör vidare ! 
