--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -6,4 +6,4 @@ Redovisning kmom01
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/01_kmom01.md`.
 
 Hej,
-Kort om kmom1 lite strull med att installera alla saker till slut har man lyckats det skööööönt! Mycket saker på en gång som man måste ha koll på det blir en hel del att läsa! Annars kan man inte säga mer nu iaf då är det början nya saker som kommer hela tiden och man vill kunna allt men det går inte så snabb som man hade tänkt sig. Vi kör vidare ! 
+Kort om kmom1 lite strull med att installera alla saker till slut har man lyckats det skööööönt! Mycket saker på en gång som man måste ha koll på det blir en hel del att läsa! Annars kan man inte säga mer nu iaf då är det början nya saker som kommer hela tiden och man vill kunna allt men det går inte så snabb som man hade tänkt sig. Jag har inte använd ramverk innan så det var helt nytt för mig att hitta sig i det. När det gäller styla webbplatsen gick det bra lite hjälp fick man av internet att leta efter specifika grejor men annars har man använd det som vi hade lärt oss under dem senaste tiderna. När det gäller TIL för detta kmom är att ta en grej i taget och inte style för mycket på ett tag för det kan blir stora bekymmer till slut. GIT att förstår vad är det för ngt och hur hanterar man det.
