Done with project kmom03

--- a/content/redovisning/03_kmom03.md
+++ b/content/redovisning/03_kmom03.md
@@ -3,4 +3,4 @@
 Redovisning kmom03
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/03_kmom03.md`.
+Hej dags för kmom03...Vi börjar med grid jag har läst lite om det innan vi började kursen design och fick möjligheten jobba lite känndes helt ok tills vi kom till detta kursen... Det blev mycket saker som man skulle går igenom sakta att förstår och det kan beror på att jag tyckte grid vad enkel innan pga jag har inte blandat det med less. I detta fallet som vi jobbar nu har vi både Less och grid. Typografiskt horisontellt/basline grid hjälper till att sidan ska vara lätt läst,tydligt och även enkel layout. Jag väljer helst enkla lösningar och inte för komplicerat saker när det gäller typsnitt valde jag en enkel Lobster cursive på navbaren då det syns och kan man enkel komma åt. Jag får väl lära mig lite mer att använda less, tycker om möjligheter med den som ex. man kan skapa flera layouter och koppla ihop det som underlättar sen leta efter saker som man vill ändra. I början körde vi bara CSS och då tyckte man att till slut hade man flera hundra rader att går igenom o hitta det var man ville men i detta fallet är det mycker enklare. Andra bra grej är använda devtools utan den tycker jag att man hade inte klarat det iaf jag. Det hjälper till när man håller på med responsive då kan man direkt ta reda på olika saker. TIL för kmom03 är använda Less med grid innan hade jag bara kunnat grid lite men nu känns det bättre men svårare också tycker jag. Jag skulle vilja ha mer tid på att anväda grid för det känns som alla sidor är byggd på detta. 
