Done with kmom04

--- a/content/redovisning/04_kmom04.md
+++ b/content/redovisning/04_kmom04.md
@@ -3,4 +3,20 @@
 Redovisning kmom04
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/04_kmom04.md`.
+Kommentera kort om skrivuppgiften, någon som är värt att nämna från arbetet med den?  
+1. När det gäller skriv uppgiften så tycker jag att den låter jätte enkelt men när man väl kommer i den så tyckte jag att det var svår. Först så var det inte enkel hitta sida som har mer än 3 färger, det känns som det finns bara svart/vit sidor och lite grå. När man väl har hittat så var det för mig att ser hur har dem tänkt när det gäller färgerna. Stora företag använder sig av färger som dem har på sitt logo det hade jah lite konstaterat.  
+
+Berätta kort om din tanke bakom respektive teman, hur tolkade du “minimalistisk”, “colorful” och “dark”.  
+2. När det gäller minimalistisk så kan man tycka att det handlar om ngt som är minimalt dvs så lite färger som möjligt, colorful låter som  starka färger dvs. röd, blå, gul och därefter dark mörka färger med mörkt bakgrunden med vit text.  
+
+Vilket färgschema valde du till respektive tema och hur valde du att använda färgerna (mer eller mindre eller lika mycket av alla färger)?  
+3. Alla färgschema hade jag använd med hjälp av color adobe, minimalistisk hade jag tänkt använda 4 olika varianter av samma färg och ädrade bara färgmättnad. Colorfoul använd färger från motsatta sidan av färghjulet från adobe color. Till slut dark som har mörka färger men i detta fallet tar man närliggande färger.  
+
+Hur tänkte du kring valet av typografi?  
+5. Här var det fullt spontan och testa sig fram...  
+
+Berätta om din kodstruktur av teman, jobbade du med bastema och hur löste du anpassningarna till de olika temana?  
+6. Valde att göra en less för varje tema som i grunden va en kopia kmom03 och sedan hade lagt in några variabel i varjer layout där vi ädrar färgerna. Det känndes lite jobbit i början men till slut har man rätt bra koll på det filerna.  
+
+Vilken är din TIL för detta kmom?  
+7. Att det är inte enkel avända sig av färgerna man kan inte välja vilken som helst man ska ha lite koll på det. 
