Done with kmomo05

--- a/content/redovisning/05_kmom05.md
+++ b/content/redovisning/05_kmom05.md
@@ -3,4 +3,18 @@
 Redovisning kmom05
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/05_kmom05.md`.
+Berätta kort om erfarenheterna med din undersökning av webbplatsers laddningstid och vad du kom fram till.  
+
+1.  I kmom04 så körde vi igenom färgerna i detta kmomo var det fokus på med bilderna visst man hade lärt sig om att lägga en bild på sidan räcker inte, man ska ha koll på det. 3 sidor och 3 undersidor tyckte jag nog att var lite för mycket och som jag hade tappat mig lite i mitten. Jag förstår era tankar att från sidan till sidan eller från undersidan till annan undersidan är jätte stor skillnad och på sätt lär man sig! Jag kom fram till att alla sidor som jag hade undersökt man kunde minska storleken på bilderna som gjorde att man kunde vinna lite laddningstid på det!  
+
+Har du några funderingar kring Cimage och dess nytta och features? Vilka bildverktyg använder du själv normalt sett?  
+
+2. Här ska jag inte säga mycket underbart verktyg att ist för använda Photoshop så kan man i markdown köra direkt Cimage riktigt bra enkel program underlättar verkligen och man får snygga lösningar visst inte lika snygga som Photoshop men i detta fallet räcker det! När det gäller @desinax/figure har jag ingeting att klaga på det var ngt nytt för mig så just nu håller jag på lära sig olika funktioner osv.  
+
+Vad är din egen allmänna uppfattning kring bilder för webben, nedladdningstider, responsiva bilder och allmänt kring bildbehandling för webben?  
+
+4. Om man tänker sig resultat för 3 sidor som man hade undersäkt är att alla sidor behöver mer eller mindre små justeringar. Att sidan laddar 2s-3s kan man leva med och godkänna det men så fort det överstiger mer än 5s då tycker man att sida är långsam. Det finns fortfarande bilder som är tunga och hur fungerar det när vi har inte tillräckligt bra nät dvs 3G ? Då kan det vara att sidan kan ladda hur långt tid som helst. Under blogg så tyckte jag nog att det var rätt så jobbit skriva text för olika bilderna.Jag valde skriva kort text i början och därefter fyllde med lorem bara för att visa, tyckte lägga tid för plugg. 
+
+Vilken är din TIL för detta kmom?  
+
+5. Att det är inte enkel när det gäller bilderna man kan inte välja vilken som helst man ska ha lite koll på det och anpassa med storleken att den ska inte blir för stort som gör att sidan laddas segare.
