Done with project kmom06

--- a/content/redovisning/06_kmom06.md
+++ b/content/redovisning/06_kmom06.md
@@ -3,4 +3,22 @@
 Redovisning kmom06
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/06_kmom06.md`.
+Hur känns det att tänka i termer av designelement och designprinciper?  
+-----------------------------------------------------------------------------
+ Det känns bra men ändå en hel del att lära sig. Det känns för att blir bra på desig behövs en hel del övninngar för just nu tycker jag att har dålig koll vad är bra eller dålig jag gick på kännsla. Jag hade letat lite på internet inspiration på olika saker som gjorde att till slut fick jag något vettigt.  
+
+Finns det något speciellt du vill lyfta fram från uppgiften “Utvärdera designprinciper som webbplatser använder sig av”. Vad tar du med dig från den uppgiften?  
+-----------------------------------------------------------------------------
+Att design har många regler som man måste följa för att bygga en bra läsbar sida.  
+
+Berätta fritt om arbetet med dina teman som bygger på designelement och designprinciper, hur gick det att jobba med designen på det sättet?  
+-----------------------------------------------------------------------------
+Det gick mycket bra. Jag tycker att jag har inte problem men själva kodning utan här var det mer ser det bra ut? passar det ? jag har dåligt kännsla vad är bra och dåligt som jag nämde innan men efter letande på nätet fick man lite inspiration. I början av detta kmomo hade jag problem att ser skillnad på några saker inom desigelement och designpriciper men när man läste en bra artikel som ligger på dbwebb man fick mer koll på vad handalr det om. Det finns olika sätt att bygga på sida i mitt fall hade jag utgått från gamla kmom05 och kmom04 som tyckte hade några av dem desigprinciper och därifrån byggde jag vidare sidan. Jag på både desigelement och desigprinciper gick på känsla för någon kan det ser ut illa men i mitt fall tror jag att jag hade fått något vettigt.  
+
+Har du en uppfattning om “the final touch” och vad det kan vara i sammanhanget webbdesign?  
+-----------------------------------------------------------------------------
+Jag har en uppfattning om vad det är lite och vet också att jag är jätte dåligt på det.  
+
+Vilken är din TIL för detta kmom?..
+------------------------------------------------------------------------------
+Att när det gäller design så finns det olika regler som man måste följa. 
