Done with kmom10

--- a/content/redovisning/10_kmom10.md
+++ b/content/redovisning/10_kmom10.md
@@ -3,4 +3,32 @@
 Redovisning kmom10
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/10_kmom10.md`.
+
+Uppdrag 1: Analys aktuell webbplatsdesign
+---------------------------------------------------------------------------------------------
+
+Jag har jobbat igenom 3 webbplatser som jag tyckte kunde vara spännande. Dem webbplatser är en av mest besökta sidor inom fotbollen. FC Barcelona, Liverpool LFC, FC Bayern Munchen. Tanken är att jämföra de olika sidorna desigprinciper och desigelemnt så som bilder, typsnitt, färgschema och generella layout. Tanken är att hitta aktuella trender. Jag använde mig allt som jag har lärt mig under kursens gång och slutresultat för dem 3 webbplatserna är att det aktuella trenderna inom fotbollen är hierarki och mer eller mindre alla använder sig av mycket färger samt bilderna spelar stor roll.
+
+
+Uppdrag 2: Analys valfri
+---------------------------------------------------------------------------------------------
+I detta uppdraget organistaionen valfrihet har bett mig att göra en analys inom design och webbplatser. Jag hade valfri val vad jag skulle göra inom design och webbplatser därför valde jag att jobba vidare med dem 3 webbplaster som gjorde innan. I detta fallet valde jag laddningstid då jag tyckte att en av dem 3 sidorna var jätte seg nät det gäller laddningstid. Metoden jag använde mig av var devtools och SpeedPage sida där jag fick resultat av dem 3 webbplater. Resultatet kunde jag koppla till första uppdraget och på så sätt fick jag fram allt vad det behövs. Själv tyckte att det behövs inte lägga så tunga bilder för att locka mer folk. Sidan ska vara lätt hanterbart men i FC Bardelona och Bayern Muchen fallet tyckte jag att det blev för mycket saker som gjorde att det blev fullpackat.
+
+
+
+Uppdrag 3: Webbplats
+---------------------------------------------------------------------------------------------
+
+Jag valde att jobba med kunden 3 "Egenföretagare Bew Gorp" som har startat upp en egen verksamhet där han hyr ut sig själv som webbprogrammerare och då behövde han en webbplats för att marknadsföra sig själv och sina utomordetliga färdigheter inom området. Jag tyckte att det var en bra början då kunde man testa göra en portfolio för att sedan kanske göra sin egen. Jag har börjat med att kopiera gamla redovisa projekt och rensa allt som jag inte behövde. Sedan har jag börjat att redan från börja dela mitt less filer för specifika delar. Jag tyckte att på så sätt kunde man har mer koll på sakerna som man ändrar. Jag har gjort seperata less filer för navbar, footer, logo, main där jag kunde lätt ändra saker. När det gäller layout det hade jag bara en fil less som styrde bara grunden med lite responsivitet och typsnitt bara för paragrapher. I navbaren har jag lagt in huvud sida, om, styleväljare och blogg. Jag har sök på nätet ett logo bild för header där jag kunde använda utan problem då man måste ha koll på rättigheter och inte ta vilken bild som helst. Favicon har jag använd från font awesome. När det gäller footer så har jag tre kolumner med olika information och content i huvud är centrerat med ett sidebar där jag har lagt kundens kunskaper och github. Undersidorna berättar lite om kunden, tema och ett alternativt tema. Jag har behåll sidebar för "Om undersida" och i "Blogg undersida" har jag lagt in 3 olika "posts".
+
+
+Uppdrag 4: Tema och Uppdrag 5: Tema alternativt
+---------------------------------------------------------------------------------------------
+Tema för Bew Gorp har jag använd en standardtema där jag valde har inte för starka färgerna och hela content som är centrert skulle ha ett slags 3D känsla. Temat är gridbaserat layout vertikalt som horisontellt då kan man använda sig av ?vgrid och ?hgrid. När det gäller tema alternativt då har jag använd mig av mörka färgerna då det många som sitter på nätterna kan vara rätt så jobbit att kolla på ljusa färgerna. Mitt tema är dokumenterat under Om sida där jag har förklarat mer vilka desigprinciper och desigelemnt har jag vald att arbeta med.
+
+
+Slutsats
+---------------------------------------------------------------------------------------------
+
+Själva projektet gick bra då hade man har koll på mest saker när det gäller less har jag en bra koll på. När man hade fått strul så alltid chatten hjälpte till. Jag hade lite semester så startat sen och fick inte det möjligheter att lägga mer tid på några saker men jag är nöjd med mitt projektet. Projektet i sig var lätt då har vi jobbat med likadant innan (me/redovisa) i mitt fall tog det några dagar och svårt i början men sen gick det hyfsat snabb. Jag tycker att det var bra att man kunde välja lite vad man vill arbeta med.  
+När det gäller själva kursen så har jag mycket funderingar först tyckte jag att det var mycket saker som vi hade installerat i början på kursen och jag skulle vilja veta lite mer om dem hoppas kommer lite längre fram. Jag tyckte att det var lite för mycket skrivande man kunde spendera tid på något annat.  Jag har lärt mig en hel del och har noterat mycket saker så som LESS och GIT viktigaste delar. Jag vet nu att jobba med design är inte enkel grej det finns flera saker som man måste tänka på. Jag rekommendera denna kursen för alla andra men man måste tänka på att det hjälper inte bara läsa eller se på video utan öva prova koden själv! 
